@@ -54,16 +54,16 @@ subprojects {
       'commons-io:commons-io:2.4'
 
 
-    testCompile 'junit:junit:4.8.2',
+    testCompile 'org.hamcrest:hamcrest-all:1.3',
       'org.mockito:mockito-all:1.9.5',
-      'org.hamcrest:hamcrest-all:1.3',
+      'junit:junit:4.8.2',
       'cglib:cglib:2.2.2',
       'org.powermock:powermock-mockito-release-full:1.5',
       'com.natpryce:make-it-easy:3.1.0'
   }
 
   test {
-    jvmArgs '-XX:-UseSplitVerifier'
+    jvmArgs '-XX:-UseSplitVerifier', '-XX:MaxPermSize=256m'
     System.properties.get('environmentName', 'local')
     systemProperties System.properties
     useJUnit {
@@ -73,7 +73,7 @@ subprojects {
   }
 
   task IntegrationTests(type: Test) {
-    jvmArgs '-XX:-UseSplitVerifier'
+    jvmArgs '-XX:-UseSplitVerifier', '-XX:MaxPermSize=256m'
     System.properties.get('environmentName', 'local')
     systemProperties System.properties
     useJUnit {
